@@ -525,8 +525,8 @@ change_state_window(GtkWidget *window){
 #ifdef DEBUGFUNCTIONCALL
     END_FUNCTION;
 #endif
-}
-/* For debugging 
+} 
+/* For debugging  
 void write_log(char *string)
 {
 FILE *filelog; filelog=fopen("/tmp/omw.log","a+"); fprintf(filelog,"\n%s\n", string);fflush(filelog);fclose(filelog);
