@@ -3,6 +3,7 @@
   * Added fullscreen button for application mode 
   * Fixed problem with downloading weather forecast
   * Increased some labels in settings window
+  * Fixed problem with proxy config parameter
   * Various small fixes
 
 0.22.1
